Added button styling and unified some UI elements